# Cold-Storage-Inspector-CSI-

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
csi/: __init__.py
csi/connectors/: __init__.py  base.py  factory.py  snowflake_connector.py
csi/models/: __init__.py  enums.py  heatmap.py  policy.py  query.py  table.py
csi/utils/: __init__.py  query_normalization.py
tests/: __init__.py  conftest.py
tests/connectors/: __init__.py  test_base.py  test_snowflake_connector.py
tests/models/: __init__.py  test_heatmap.py  test_policy.py  test_query_record.py  test_table.py
tests/utils/: __init__.py  test_query_normalization.py
