[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-storage-inspector"
version = "0.1.0"
description = "AI-powered data warehouse cost optimization through intelligent cold data archival"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CSI Team", email = "team@coldstorageinspector.com"}
]
keywords = ["data-warehouse", "cost-optimization", "data-archival", "snowflake", "bigquery", "databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sqlglot>=23.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.0.0",
    "snowflake-sqlalchemy>=1.4.0",
]
bigquery = [
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-bigquery-storage>=2.19.0",
]
databricks = [
    "databricks-sql-connector>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]
all = [
    "cold-storage-inspector[snowflake,bigquery,databricks,dev]",
]

[project.scripts]
csi = "csi.cli:main"

[tool.setuptools]
packages = ["csi"]

[tool.setuptools.package-data]
csi = ["templates/*.html", "templates/*.js"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=csi --cov-report=term-missing"


